# opencine

./: CMakeLists.txt  Readme.md
Source/FrameServer/: CMakeLists.txt  FrameServer.cpp
Source/FrameServer/AVIEncode/: AVIContainer.cpp  AVIContainer.h  AVIStruct.h  SimpleTree.h
Source/FrameServer/FuseCallback/: FuseCallback.cpp  FuseCallback.h
Source/FrameServer/Interfaces/: IFrameServerPresenter.cpp  IFrameServerView.h
Source/FrameServer/Presenter/: FrameServerPresenter.cpp  FrameServerPresenter.h
Source/FrameServer/Views/: frameServerView.cpp  frameServerView.h  frameServerView.ui
Source/OCBackup/Views/: BackupView.cpp
Source/OCcore/Image/: BayerFrameDownscaler.cpp  BayerFrameDownscaler.h  IImageLoader.h  ImageProvider.cpp  ImageProvider.h  MLVLoader.cpp  MLVLoader.h  OCImage.cpp  TIFFLoader.cpp  TIFFLoader.h  VideoClip.cpp  VideoClip.h
Source/OCcore/Memory/: FrameInfo.h  IAllocator.h  StaticAllocator.cpp  StaticAllocator.h
Source/OCui/Helper/: QMLThumbnailProvider.cpp  QMLThumbnailProvider.h
Source/ProcessingTest/: CMakeLists.txt  ProcessingTest.cpp
Source/ProcessingTest/AVIEncode/: AVIContainer.cpp  AVIContainer.h  AVIStruct.h
Source/ProcessingTest/FrameServer/: FrameServer.cpp  FrameServer.h
Source/ProcessingTest/Presenters/: ProcessingPresenter.cpp  ProcessingPresenter.h
Source/ProcessingTest/Views/: ProcessingView.cpp  ProcessingView.ui
Source/UnitTests/: BilinearBenchmark.cpp  BilinearBenchmarkOCL.cpp  BilinearBenchmarkOMP.cpp  GEDIBenchmark.cpp  GEDIBenchmarkOMP.cpp  SHOODAKBenchmark.cpp  SHOODAKBenchmarkOMP.cpp
